<resources>
    <string name="app_name">Air Quality Gijón</string>

    <!--<string name="button">Update</string>-->
    <!--<string name="toast_updating">Retrieving latest hour data...</string>-->

    <!-- Menu Items -->
    <string name="menu_home_main">Refresh data</string>
    <string name="menu_home_station">Home</string>
    <string name="menu_info">Air quality levels info...</string>
    <string name="menu_about">About Air Quality Gijón App...</string>
    <!-- Menu AlertDialogs -->
    <string name="menu_alert_dialog_ok">Ok</string>
    <string name="menu_alert_dialog_info_title">Air Quality Levels Info</string>
    <string name="menu_alert_dialog_info_message">
        - Dark Green Circle: Very Good\n
        - Light Green Circle: Good\n
        - Yellow Circle: Bad\n
        - Red Circle: Very Bad\n
        \nThe total air quality level is the same one that the worst level of a single compound.
        That means that if, for example, every compound has a \'very good\' level but one has a \'very bad\' one the total air quality is \'very bad\'.\n
        \nIf the level of a given compound is \'bad\' that means that, according to the data provided by the city council, it is over the safe limits for health.
    </string>
    <string name="menu_alert_dialog_about_title">About Air Quality Gijón App</string>
    <string name="menu_alert_dialog_about_message">App designed and implemented by Alejandro Martínez Remis.\n\nData provided by the City Council of Gijón (Asturias, Spain).</string>

    <!-- AirStationTypeX toString() -->
    <string name="station">Station</string>
    <string name="title">Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="date">Date</string>
    <string name="so2">Sulfur dioxide (SO2)</string>
    <string name="no">Nitrogen monoxide (NO)</string>
    <string name="no2">Nitrogen dioxide (NO2)</string>
    <string name="co">Carbon monoxide (CO)</string>
    <string name="pm10">Suspended particles smaller than 10 µm</string>
    <string name="o3">Ozone (O3)</string>
    <string name="dd">Wind Direction</string>
    <string name="vv">Wind Speed</string>
    <string name="tmp">Temperature</string>
    <string name="hr">Relative Humidity</string>
    <string name="prb">Pressure</string>
    <string name="rs">Solar Irradiance</string>
    <string name="ll">Precipitation</string>
    <string name="ben">Benzene (C6H6)</string>
    <string name="tol">Toluene (C7H8)</string>
    <string name="mxil">Meta-xylene (C8H10)</string>
    <string name="pm25">Suspended particles smaller than 2,5 µm</string>
    <string name="voc_separator">Volatile organic compounds (from fuel burning)</string>
    <string name="text_before_time">at</string>
    <string name="unit_micro">μg/m³</string>
    <string name="unit_milli">mg/m³</string>
    <string name="temperature_unit">ºC</string>
    <string name="humidity_unit">%</string>
    <string name="pressure_unit">hPa</string>
    <string name="wind_direction_unit">º</string>
    <string name="wind_speed_unit">km/h</string>
    <string name="solar_radiation_unit">W/m²</string>
    <string name="precipitation_unit">l/m²</string>
    <string name="no_data">No Data</string>


    <!-- Main -->
    <string name="loading">Retrieving latest hour data...</string>
    <string name="station_avenida_constitucion">Avenida Constitución</string>
    <string name="station_avenida_argentina">Avenida Argentina</string>
    <string name="station_montevil">Montevil</string>
    <string name="station_hermanos_felgueroso">Hermanos Felgueroso</string>
    <string name="station_avenida_castilla">Avenida Castilla</string>
    <string name="station_santa_barbara">Santa Bárbara</string>

    <!-- Station -->
    <string name="air_quality">Average air quality</string>
    <string name="air_quality_very_good">Very Good</string>
    <string name="air_quality_good">Good</string>
    <string name="air_quality_bad">Bad</string>
    <string name="air_quality_very_bad">Very Bad</string>
    <string name="air_quality_unknown">Unknown</string>

    <string name="location">Location</string>
    <string name="location_message">Press here to see it in Google Maps</string>

    <!-- Wind Direction -->
    <string name="north">N</string>
    <string name="north_east">NE</string>
    <string name="east">E</string>
    <string name="south_east">SE</string>
    <string name="south">S</string>
    <string name="south_west">SW</string>
    <string name="west">W</string>
    <string name="north_west">NW</string>


    <string name="icon_copyright">Icon made by Vaadin from www.flaticon.com/authors/vaadin</string>
</resources>
