<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.martinez.airpollution.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/mainHeaderTextColor"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewPictureAvdaConstitucion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_avda_constitucion" />

                        <ImageView
                            android:id="@+id/imageViewPictureAvdaArgentina"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_avda_argentina" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewCircleAvdaConstitucion"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />

                        <ImageView
                            android:id="@+id/imageViewCircleAvdaArgentina"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_avenida_constitucion"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_avenida_argentina"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewPictureMontevil"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_montevil" />

                        <ImageView
                            android:id="@+id/imageViewPictureHermanosFelgueroso"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_hermanos_felgueroso" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewCircleMontevil"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />

                        <ImageView
                            android:id="@+id/imageViewCircleHermanosFelgueroso"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_montevil"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_hermanos_felgueroso"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewPictureAvdaCastilla"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_avda_castilla" />

                        <ImageView
                            android:id="@+id/imageViewPictureSantaBarbara"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_station_santa_barbara" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewCircleAvdaCastilla"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />

                        <ImageView
                            android:id="@+id/imageViewCircleSantaBarbara"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:onClick="onImageClick"
                            app:srcCompat="@drawable/ic_circle_unknown" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_avenida_castilla"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight=".5"
                        android:text="@string/station_santa_barbara"
                        android:textAlignment="center"
                        android:textColor="@color/mainHeaderTextColor"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>